Note which manager did a change to a member